apps/renovate-ce/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: renovate-ce
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: renovate-ce
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mend-renovate-server-ingress
  namespace: renovate-ce
spec:
  endpointSelector:
    matchLabels:
      app: mend-renovate-server
      app.kubernetes.io/instance: renovate-ce
      app.kubernetes.io/name: mend-renovate
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-egress
  namespace: renovate-ce
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: renovate-ce
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: renovate-ce
            app: mend-renovate-server
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "10080"
              protocol: TCP
            - port: "10443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
            - 100.64.0.0/10
